# back/FurnitureHelper/src/ExtranetAPI/Controllers/ProjectStageController.cs
@@ -44,7 +44,7 @@ namespace ExtranetAPI.Controllers
         /// <param name="stage"></param>
         /// <returns></returns>
         [Authorize( Roles = "Admin, Owner" )]
-        [HttpPost( "{projecStageId}/project-stage-updating" )]
+        [HttpPost( "{projectStageId}/project-stage-updating" )]
         [SwaggerResponse( statusCode: 200, type: typeof( int ), description: "Обновить основную информацию по этапу проекта" )]
         public async Task<IActionResult> UpdateProject(
             [FromRoute, Required] int projectStageId,
